--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^27.5.1",
-    "stylelint": "^15.7.0",
+    "stylelint": "^13.13.1",
     "stylelint-config-recommended": "^12.0.0",
-    "stylelint-config-standard": "^33.0.0"
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.21.0"
   }
 }
