--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "eject": "react-scripts eject",
     "lint:css": "stylelint \"src/**/*.css\" --fix",
     "lint:js": "eslint src",
-    "lint": "npm run lint:css && npm run lint:js"
+    "lint": "npm run lint:css && npm run lint:js --fix"
   },
   "eslintConfig": {
     "extends": [
